# Shara

./: .gitignore  README.md  cors.json  package-lock.json
ai-backend/: main.py
backend/: .gitignore  Cargo.toml  credits.txt  example.py  requirements.txt
backend/ai-backend/: .env  main.py  tile_sticher.py
backend/ai_stub/: main.py
backend/data/: groups.json  issues.json  messages.json  users.json
backend/src/: filestore.rs  lib.rs  main.rs
frontend/: .env  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  firebase.js  index.css
frontend/src/components/: AddIssue.jsx  EsriMap.jsx  Filters.jsx  GroupChat.jsx  Groups.jsx  IssueDetails.jsx  MainMap.jsx  Sidebar.jsx  UsernameGate.jsx
frontend/src/hooks/: useAuth.js  useIssues.js
frontend/src/pages/: AdminIssues.jsx
frontend/src/utils/: uploadToCloudinary.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: groups.json  issues.json  messages.json  users.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
