[package]
name = "shara-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
tokio-util = "0.7.17"
base64 = "0.22.1"
dotenvy = "0.15"
